--- a/Hub/Dashboard/DashboardWeb/Styles/HomeOSMasterStyleSheet.css
+++ b/Hub/Dashboard/DashboardWeb/Styles/HomeOSMasterStyleSheet.css
@@ -111,7 +111,7 @@ Swap with other colors in the palette by replacing 'background: #3ECFF9' with an
         .app_reqs {
             font-size: 75%;
             padding: 1%;
-            background-color:#3ECFF9;
+            background-color:#4cff00; /*#3ECFF9;*/
         }
         .app_image 
         {
@@ -267,7 +267,8 @@ Swap with other colors in the palette by replacing 'background: #3ECFF9' with an
         .app_reqs {
             font-size: 80%;
             padding: 1%;
-            background-color:#3ECFF9;
+            background-color: #00ff90; /* #3ECFF9;*/
+            color: green;
         }
         .app_image 
         {
@@ -445,6 +446,7 @@ Swap with other colors in the palette by replacing 'background: #3ECFF9' with an
             font-size: 80%;
             padding: 1%;
             background-color: #3ECFF9;
+            color: #0ff;
         }
         .app_image 
         {
